# CMakeList.txt: проект CMake для Break_Out_Game; включите исходный код и определения,
# укажите здесь логику для конкретного проекта.
#
cmake_minimum_required (VERSION 3.8)

# Добавьте источник в исполняемый файл этого проекта.
add_executable (Break_Out_Game "Break_Out_Game.cpp" "Break_Out_Game.h")

# TODO: Добавьте тесты и целевые объекты, если это необходимо.
